--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-graphql": "^0.9.0"
+    "express-graphql": "^0.9.0",
+    "graphql": "^14.4.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
